tests/baselines/reference/crashRegressionTest.errors.txt
==== tests/cases/compiler/crashRegressionTest.ts (4 errors) ====
    module MsPortal.Util.TemplateEngine {
        "use strict";
     
        interface TemplateKeyValue {
            [name: string]: string;
        }
     
        class StringTemplate {
            private _templateStorage: TemplateStorage;
     
            constructor(templateStorage: TemplateStorage) {
                this._templateStorage = templateStorage;
            }
     
            public text(value?: string): any {
                this._templateStorage.templateSources[this._name] = value;
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2008: Value of type 'MsPortal.Util.TemplateEngine.TemplateKeyValue' is not indexable by type 'any'.
                                                           ~~~~~
!!! error TS2094: The property '_name' does not exist on value of type 'StringTemplate'.
            }
        }
     
        export class TemplateStorage {
            public templateSources: TemplateKeyValue = {};
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2025: Public property 'templateSources' of exported class has or is using private type 'TemplateKeyValue'.
            public templateData: TemplateKeyValue = {};
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2025: Public property 'templateData' of exported class has or is using private type 'TemplateKeyValue'.
        }
    }
    